devops/k8s/base/coturn.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: coturn
  name: coturn-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "coturn-service"
spec:
  type: LoadBalancer
  ports:
    - { port: 80, nodePort: 30045, name: az }
  selector:
    app: coturn
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: coturn
  name: coturn-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "coturn-service"
spec:
  type: LoadBalancer
  ports:
    - { port: 80, nodePort: 30046, name: af, protocol: UDP }
    - { port: 25000, nodePort: 30000, name: a0, protocol: UDP }
    - { port: 25001, nodePort: 30001, name: a1, protocol: UDP }
    - { port: 25002, nodePort: 30002, name: a2, protocol: UDP }
    - { port: 25003, nodePort: 30003, name: a3, protocol: UDP }
    - { port: 25004, nodePort: 30004, name: a4, protocol: UDP }
    - { port: 25005, nodePort: 30005, name: a5, protocol: UDP }
    - { port: 25006, nodePort: 30006, name: a6, protocol: UDP }
    - { port: 25007, nodePort: 30007, name: a7, protocol: UDP }
    - { port: 25008, nodePort: 30008, name: a8, protocol: UDP }
    - { port: 25009, nodePort: 30009, name: a9, protocol: UDP }
  selector:
    app: coturn
