devops/k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "gcr.io/PROJECT_ID/FRONTEND_IMAGE:TAG"
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1000Mi
              cpu: 1
            limits:
              memory: 2000Mi
              cpu: 2
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
