devops/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: webrtc-meeting-lb-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 3000
